--- a/.gitignore
+++ b/.gitignore
@@ -396,3 +396,27 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+.vs/SudokuMaximized/DesignTimeBuild/.dtbcache.v2
+.vs/SudokuMaximized/v17/.futdcache.v1
+.vs/SudokuMaximized/v17/.suo
+GenerateLib/obj/Debug/net6.0/GenerateLib.assets.cache
+GenerateLib/obj/Debug/net6.0/GenerateLib.csproj.AssemblyReference.cache
+GenerateLib/obj/Debug/net6.0/GenerateLib.GeneratedMSBuildEditorConfig.editorconfig
+GenerateLib/obj/GenerateLib.csproj.nuget.dgspec.json
+GenerateLib/obj/GenerateLib.csproj.nuget.g.props
+GenerateLib/obj/project.assets.json
+GenerateLib/obj/project.nuget.cache
+Sudoku/obj/Debug/net6.0/Sudoku.assets.cache
+Sudoku/obj/Debug/net6.0/Sudoku.csproj.AssemblyReference.cache
+Sudoku/obj/Debug/net6.0/Sudoku.GeneratedMSBuildEditorConfig.editorconfig
+Sudoku/obj/project.assets.json
+Sudoku/obj/project.nuget.cache
+Sudoku/obj/Sudoku.csproj.nuget.dgspec.json
+Sudoku/obj/Sudoku.csproj.nuget.g.props
+SudokuTesting/obj/Debug/net6.0/SudokuTesting.assets.cache
+SudokuTesting/obj/Debug/net6.0/SudokuTesting.csproj.AssemblyReference.cache
+SudokuTesting/obj/Debug/net6.0/SudokuTesting.GeneratedMSBuildEditorConfig.editorconfig
+SudokuTesting/obj/project.assets.json
+SudokuTesting/obj/project.nuget.cache
+SudokuTesting/obj/SudokuTesting.csproj.nuget.dgspec.json
+SudokuTesting/obj/SudokuTesting.csproj.nuget.g.props
