--- a/.gitignore
+++ b/.gitignore
@@ -478,3 +478,4 @@ Sudoku/obj/Debug/net6.0/Sudoku.GeneratedMSBuildEditorConfig.editorconfig
 SudokuTesting/obj/Debug/net6.0/SudokuTesting.assets.cache
 SudokuTesting/obj/Debug/net6.0/SudokuTesting.csproj.AssemblyReference.cache
 SudokuTesting/obj/Debug/net6.0/SudokuTesting.GeneratedMSBuildEditorConfig.editorconfig
+.vs/SudokuMaximized/v17/.suo
