added config for valid sudoku extension files

--- a/Sudoku/.env
+++ b/Sudoku/.env
@@ -4,3 +4,4 @@ UI=Console
 INTERPRETERCONFIG="./Factory/Config/InterpreterFactoryConfiguration.json"
 COMPONENTCONFIG="./Factory/Config/ComponentFactoryConfiguration.json"
 VISITORCONFIG="./Factory/Config/VisitorFactoryConfiguration.json"
+IMPORTCONFIG="./Model/Import/Config/ImportFileExtensionConfiguration.json"
