--- a/Sudoku/.env
+++ b/Sudoku/.env
@@ -4,4 +4,4 @@ UI=Console
 INTERPRETERCONFIG="./Factory/Config/InterpreterFactoryConfiguration.json"
 COMPONENTCONFIG="./Factory/Config/ComponentFactoryConfiguration.json"
 VISITORCONFIG="./Factory/Config/VisitorFactoryConfiguration.json"
-IMPORTCONFIG="./Model/Import/Config/ImportFileExtensionConfiguration.json"
+IMPORTVALIDEXTENSIONCONFIG="./Model/Import/Config/ImportFileExtensionConfiguration.json"
