--- a/.gitignore
+++ b/.gitignore
@@ -396,3 +396,7 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+
+# allows config files to be added again
+!**/Sudoku/bin/Debug/net6.0/Factory/Config/*
+!**/GenerateLib/bin/Debug/net6.0/Factory/Config/*
