--- a/.gitignore
+++ b/.gitignore
@@ -398,5 +398,7 @@ FodyWeavers.xsd
 *.sln.iml
 
 # allows config files to be added again
+!/Sudoku/bin/Debug/net6.0/Factory/Config/
 !**/Sudoku/bin/Debug/net6.0/Factory/Config/*
+!/GenerateLib/bin/Debug/net6.0/Factory/Config/
 !**/GenerateLib/bin/Debug/net6.0/Factory/Config/*
