--- a/GenerateLib/GenerateLib.csproj
+++ b/GenerateLib/GenerateLib.csproj
@@ -7,15 +7,28 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <Resource Include="Config\Factory\ComponentFactoryConfiguration.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Resource>
+      <Resource Include="Config\Factory\VisitorFactoryConfiguration.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Resource>
+      <Resource Include="Config\ImportHandler\ImportValidFileExtensionConfiguration.json" />
+    </ItemGroup>
+
+    <ItemGroup>
       <PackageReference Include="DotNetEnv" Version="2.3.0" />
       <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
     </ItemGroup>
 
     <ItemGroup>
-      <None Update="Factory\Config\ComponentFactoryConfiguration.json">
+      <None Update="Config\Factory\ComponentFactoryConfiguration.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
-      <None Update="Factory\Config\VisitorFactoryConfiguration.json">
+      <None Update="Config\Factory\VisitorFactoryConfiguration.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="Config\ImportHandler\ImportValidFileExtensionConfiguration.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
     </ItemGroup>
