Lots of refactors

--- a/Sudoku/.env
+++ b/Sudoku/.env
@@ -4,3 +4,4 @@ UI=Console
 COMPONENTCONFIG="./Config/ComponentFactoryConfiguration.json"
 VISITORCONFIG="./Config/VisitorFactoryConfiguration.json"
 IMPORTVALIDEXTENSIONCONFIG="./Config/ImportValidFileExtensionConfiguration.json"
+GAMEKEYCONFIG="./Resources/Config/GameKeyConfig.json"
