--- a/ObjectCreation/ObjectCreation.csproj
+++ b/ObjectCreation/ObjectCreation.csproj
@@ -4,6 +4,8 @@
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <AssemblyName>ObjectCreation</AssemblyName>
+        <RootNamespace>ObjectCreation</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
@@ -16,6 +18,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Abstraction\Abstraction.csproj" />
       <ProjectReference Include="..\Helpers\Helpers.csproj" />
     </ItemGroup>
 
