--- a/Solvers/Solvers.csproj
+++ b/Solvers/Solvers.csproj
@@ -8,7 +8,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Abstraction\Abstraction.csproj" />
-      <ProjectReference Include="..\Factories\Factories.csproj" />
+      <ProjectReference Include="..\ObjectCreation\ObjectCreation.csproj" />
       <ProjectReference Include="..\Helpers\Helpers.csproj" />
     </ItemGroup>
 
