--- a/BoardConstruction/BoardConstruction.csproj
+++ b/BoardConstruction/BoardConstruction.csproj
@@ -13,4 +13,13 @@
       <ProjectReference Include="..\Solvers\Solvers.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Update="Config\ComponentFactoryConfiguration.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="Config\VisitorFactoryConfiguration.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
