--- a/Sudoku/Sudoku.csproj
+++ b/Sudoku/Sudoku.csproj
@@ -16,8 +16,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\BoardConstruction\BoardConstruction.csproj" />
-      <ProjectReference Include="..\ObjectCreation\ObjectCreation.csproj" />
+      <ProjectReference Include="..\Construction\Construction.csproj" />
       <ProjectReference Include="..\Helpers\Helpers.csproj" />
       <ProjectReference Include="..\Import\Import.csproj" />
     </ItemGroup>
