--- a/SudokuTesting/SudokuTesting.csproj
+++ b/SudokuTesting/SudokuTesting.csproj
@@ -15,4 +15,29 @@
         <PackageReference Include="coverlet.collector" Version="3.1.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Construction\Construction.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Update="TestResources\puzzle.4x4">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="TestResources\puzzle.6x6">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="TestResources\puzzle.9x9">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="TestResources\puzzle.samurai">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="TestResources\puzzle2.samurai">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="TestResources\puzzle3.samurai">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
