Test and introduction new command.

--- a/SudokuTesting/SudokuTesting.csproj
+++ b/SudokuTesting/SudokuTesting.csproj
@@ -18,6 +18,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Construction\Construction.csproj" />
+      <ProjectReference Include="..\Sudoku\Sudoku.csproj" />
     </ItemGroup>
 
     <ItemGroup>
